<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ConnectActivity">
    <!--ip地址-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/ip_1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColorHint="@color/theme_dark"
            android:gravity="bottom"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/defaultIp"/>
        <TextView
            android:id="@+id/dot_1"
            android:layout_toEndOf="@id/ip_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_alignBottom="@id/ip_1"
            />
        <EditText
            android:id="@+id/ip_2"
            android:layout_toEndOf="@id/dot_1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColorHint="@color/theme_dark"
            android:gravity="bottom"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/defaultIp"/>
        <TextView
            android:id="@+id/dot_2"
            android:layout_toEndOf="@id/ip_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_alignBottom="@id/ip_1"
            />
        <EditText
            android:id="@+id/ip_3"
            android:layout_toEndOf="@id/dot_2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColorHint="@color/theme_dark"
            android:gravity="bottom"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/defaultIp"/>
        <TextView
            android:id="@+id/dot_3"
            android:layout_toEndOf="@id/ip_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_alignBottom="@id/ip_1"
            />
        <EditText
            android:id="@+id/ip_4"
            android:layout_toEndOf="@id/dot_3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColorHint="@color/theme_dark"
            android:gravity="bottom"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/defaultIp"/>
    </RelativeLayout>
    <!--端口号-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/port"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:background="@color/white"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--用户名-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/username"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:background="@color/white"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--密码-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/password"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@color/white"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--匿名登陆-->
    <CheckBox
        android:id="@+id/anonymous"
        android:text="@string/anonymous"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </CheckBox>
    <!--连接-->
    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/connect"
        />
</LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/connect_nav"
        >
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>